--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <title>devY</title>
+    <script src="//cdn.auth0.com/js/lock-7.9.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   </head>
-  <body>
+  <body style="margin:0">
     <div class="devY" id="root">
     </div>
     <script src="/static/bundle.js"></script>
